testing out css

--- a/client/html/layout.html
+++ b/client/html/layout.html
@@ -10,12 +10,13 @@
 	type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700"
 	rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	</head>
 
 <body>
 	{{> bertAlert}}
 	{{> sidebar}}
-	<!-- This is where main layout is rendered --> 
+	<!-- This is where main layout is rendered -->
 </body>
 
 <template name="main_layout">
