--- a/client/html/sidebar.html
+++ b/client/html/sidebar.html
@@ -14,7 +14,7 @@
 			{{/if}}
 
 			{{#if nonAdmin}}
-			<a class="link-blue" href="/reviews" id="reviews-link"><i class="fa fa-comments-o"></i>Latest</a>
+			<a class="link-blue" href="/reviews" id="reviews-link"><i class="material-icons" style="font-size:36px">access_time</i>Latest</a>
 			<a class="link-yellow" href="/rankings" id="rankings-link"><i class="fa fa-trophy"></i>Featured</a><!--Change to featured posts-->
 			<a class="link-green" href="/search" id="search-link"><i class="fa fa-search"></i>Search</a>
 		  {{/if}}
